fix navigation visibility

--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -9,6 +9,7 @@
   &__checkbox:checked ~ &__box {
     width: 100%;
     opacity: 1;
+    visibility:visible;
   }
 
   &__button {
@@ -46,6 +47,7 @@
     right: 0;
     z-index: 2500;
     opacity: 0;
+    visibility: hidden;
     transition: all 0.5s;
   }
 
